test/files/neg/macro-invalidimpl-c.check
Impls_Macros_1.scala:8: error: macro implementation must be in statically accessible object
  def foo(x: Any) = macro Impls.foo
                                ^
one error found
